@@ -118,7 +118,9 @@ get '/group' => sub {
 
 get '/users/:group' => sub {
     my $c = shift;
-    $c->render_json([ $c->authz->users_in_group($c->stash('group')) ]);
+    my $users = $c->authz->users_in_group($c->stash('group'));
+    $c->render(text => 'not ok', status => 404) unless defined $users;
+    $c->render_json($users);
 };
 
 authenticate;
@@ -171,6 +173,30 @@ post '/group/:group' => sub {
     $c->refresh;
     my $users = $c->req->json->{users};
     $c->authz->update_group($c->param('group'), $users)
+    ? $c->render(text => 'ok', status => 200)
+    : $c->render(text => 'not ok', status => 404);
+};
+
+post '/group/:group/:user' => sub {
+    my($c) = @_;
+    $c->refresh;
+    my $users = $c->authz->users_in_group($c->stash('group'));
+    return $c->render(text => 'not ok', status => 404) unless defined $users;
+    push @$users, $c->stash('user');
+    @$users = uniq @$users;
+    $c->authz->update_group($c->param('group'), join(',', @$users))
+    ? $c->render(text => 'ok', status => 200)
+    : $c->render(text => 'not ok', status => 404);
+};
+
+del '/group/:group/:user' => sub {
+    my($c) = @_;
+    $c->refresh;
+    my $users = $c->authz->users_in_group($c->stash('group'));
+    return $c->render(text => 'not ok', status => 404) unless defined $users;
+    my $user = $c->stash('user');
+    @$users = grep { $_ ne $user } @$users;
+    $c->authz->update_group($c->param('group'), join(',', @$users))
     ? $c->render(text => 'ok', status => 200)
     : $c->render(text => 'not ok', status => 404);
 };
