@@ -1,0 +1,6 @@
+full1: foo,bar,baz,primus
+full2: *
+part1: foo
+part2: baz
+full3: foo,bar,baz,primus
+full4: *
