@@ -6,3 +6,6 @@ Revision history for {{$dist->name}}
   - use Apache MD5 password when creating/changing passwords
   - accept Apache or Unix MD5 encrypted passwords
   - renamed PlugAuth from SimpleAuth
+  - /users/:group returns 404 for groups that don't exist
+  - POST /group/:group/:user to add a user to a group
+  - DELETE /group/:group/:user to remove a user from a group
